# UwIDE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  main.qrc  package.json  pnpm-lock.yaml
src/: AppWindow.cpp  AppWindow.h  app.cpp  app.h  app.html  main.cpp  main.qml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.svelte  ConsolePanel.svelte  EditorPanel.svelte  ExplorerPanel.svelte  MenuBar.svelte  icons.ts
src/components/EditorPanel/: CodeEditor.svelte  EditorPanel.svelte  EditorTabs.svelte  editor-utils.ts  editor_tabs-utils.ts
src/components/MenuBar/: MenuBar.svelte  menu-data.ts  menu-utils.ts
src/core/: Explorer.cpp  Explorer.h  MenuController.cpp  MenuController.h
src/core/CodeEditor/: CodeDocumentModel.cpp  CodeDocumentModel.h
src/core/Explorer/: ExplorerListModel.cpp  ExplorerListModel.h
src/panels/editor/: EditorWidget.cpp  EditorWidget.h  EditorWindow.cpp  EditorWindow.h
src/qml/components/: EditorPanel.qml  MenuBar.qml  SidePanel.qml
src/qml/pages/: WelcomePage.qml
src/routes/: +page.svelte
src/utils/: fs.ts
static/: reset.css
